Implement safehouse types